# weather-app-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
scripts/: activate_venv.sh  entrypoint.sh
