[project]
name = "weather-app-api"

dependencies = [
    "fastapi==0.111.0",
    "sqlalchemy[asyncio]==2.0.30",
    "uvicorn[standard]==0.28.0",
]

optional-dependencies.dev = [
    "pip-audit==2.7.3",
    "ruff==0.4.5",
    "pytest==8.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false